# QuickFetch

./: .gitignore  Cargo.toml  LICENSE  README.md  mufiz_urls.py
examples/: mufiz.rs  mufiz_pkg.rs  pkgs.toml  speed.rs  sync.rs  timer.rs  watch.toml  watcher.rs
flowcharts/: channel.md  concurrent.md  watch.md
mufiz/: db
mufiz/blobs/: 1001  1017  1033  112  1230  1246  1262  1278  128  1294  1310  1326  1342  1358  1374  1390  1406  1422  144  160  176  192  208  224  256  272  288  304  320  352  513  529  545  561  577  593  609  625  809  825  (+11 more)
pkgs/: mufiz-0.6.0-1.aarch64.rpm  mufiz-0.6.0-1.i386.rpm  mufiz-0.6.0-1.mips.rpm  mufiz-0.6.0-1.mips64.rpm  mufiz-0.6.0-1.mips64el.rpm  mufiz-0.6.0-1.mipsel.rpm  mufiz-0.6.0-1.ppc.rpm  mufiz-0.6.0-1.ppc64.rpm  mufiz-0.6.0-1.ppc64le.rpm  mufiz-0.6.0-1.riscv64.rpm  mufiz-0.6.0-1.x86_64.rpm  mufiz_0.6.0_amd64.deb  mufiz_0.6.0_arm64.deb  mufiz_0.6.0_i386.deb  mufiz_0.6.0_mips64.deb  mufiz_0.6.0_mips64el.deb  mufiz_0.6.0_mipsel.deb  mufiz_0.6.0_powerpc.deb  mufiz_0.6.0_powerpc64.deb  mufiz_0.6.0_powerpc64le.deb  mufiz_0.6.0_riscv64.deb
quickfetch_derive/: Cargo.toml
quickfetch_derive/src/: lib.rs
quickfetch_traits/: Cargo.toml
quickfetch_traits/src/: lib.rs
src/: encrption.rs  encryption.rs  key_val.rs  lib.rs  package.rs  val.rs  watcher.rs
