[package]
name = "quickfetch"
description = "A library built to create package managers quickly!"
version = "0.3.0"
edition = "2021"
license = "MIT"
authors = ["Mustafif Khan", "Moka-Reads"]
documentation = "https://docs.rs/quickfetch/latest"
homepage = "https://mokareads.org"
repository = "https://github.com/Moka-Reads/QuickFetch"

[[example]]
name = "mufiz_pkg"
path = "examples/mufiz_pkg.rs"

[[example]]
name = "timer"
path = "examples/timer.rs"

[[example]]
name = "watcher"
path = "examples/watcher.rs"

[dependencies]
anyhow = "1.0.86"
futures = "0.3.30"
reqwest = { version = "0.12.4", features = ["json", "brotli", "stream"] }
sled = "0.34.7"
tokio = { version = "1.37.0", features = ["full"] }
url = "2.5.0"
serde = { version = "1.0.203", features = ["derive"] }
log = "0.4.21"
pretty_env_logger = "0.5.0"
dirs = "5.0.1"
semver = "1.0.23"
bincode = "1.3.3"
serde_json = "1.0.117"
toml = "0.8.14"
bytes = "1.6.0"
rand = "0.8.5"
chacha20poly1305 = "0.10.1"
aes-gcm = "0.10.3"
quickfetch_traits = { path = "quickfetch_traits", version = "0.1" }
itertools = "0.13.0"
kanal = "0.1.0-pre8"
indicatif = { version = "0.17.8", features = ["futures"] }
notify = { version = "6.1" }
#salsa20 = "0.10.2"
#blowfish = "0.9.1"
#twofish = "0.7.1"
[profile.release]
strip = true      # Automatically strip symbols from the binary.
lto = true        # Enables link time optimizations to optimize at link-stage
codegen-units = 1 # allows for maximum size reduction optimizations
panic = "abort"   # reduces size of panic unwind backtrace

[features]
default = []
unstable = []
