[package]
name = "quickfetch"
description = "A library built to create package managers quickly!"
version = "0.4.0"
edition = "2021"
license = "MIT"
authors = ["Mustafif Khan", "Moka-Reads"]
documentation = "https://docs.rs/quickfetch/latest"
homepage = "https://mokareads.org"
repository = "https://github.com/Moka-Reads/QuickFetch"

[[example]]
name = "mufiz_pkg"
path = "examples/mufiz_pkg.rs"

[[example]]
name = "timer"
path = "examples/timer.rs"

[dependencies]
anyhow = "1.0.86"
futures = "0.3.30"
reqwest = { version = "0.12.4", features = ["json", "brotli", "stream"] }
sled = "0.34.7"
tokio = { version = "1.37.0", features = ["full"] }
url = "2.5.0"
serde = { version = "1.0.203", features = ["derive"] }
log = "0.4.21"
pretty_env_logger = "0.5.0"
dirs = "5.0.1"
semver = "1.0.23"
bincode = "1.3.3"
serde_json = "1.0.117"
toml = "0.8.14"
bytes = "1.6.0"
quickfetch_traits = { path = "quickfetch_traits", version = "0.2" }
itertools = "0.13.0"
kanal = "0.1.0-pre8"
indicatif = { version = "0.17.8", features = ["futures"] }
notify = { version = "6.1" }
aead = "0.5.2"
aes-gcm-siv = { version = "0.11.1", optional = true }
aes-siv = { version = "0.7.0", optional = true }
ascon-aead = { version = "0.4.2", optional = true }
ccm = { version = "0.5.0", optional = true }
aes = { version = "0.8.4", optional = true }
deoxys = { version = "0.1.0", optional = true }
eax = { version = "0.5.0", optional = true }
chacha20poly1305 = { version = "0.10.1", optional = true }
aes-gcm = { version = "0.10.1", optional = true }

[profile.release]
strip = true      # Automatically strip symbols from the binary.
lto = true        # Enables link time optimizations to optimize at link-stage
codegen-units = 1 # allows for maximum size reduction optimizations
panic = "abort"   # reduces size of panic unwind backtrace

[features]
default = ["aes"]
unstable = []
aes = ["dep:aes-gcm"]
chacha20poly = ["dep:chacha20poly1305"]
aes-gcm-siv = ["dep:aes-gcm-siv"]
aes-siv = ["dep:aes-siv"]
ascon-aead = ["dep:ascon-aead"]
ccm = ["dep:ccm", "dep:aes"]
deoxys = ["dep:deoxys"]
eax = ["dep:eax", "dep:aes"]


all = [
    "aes",
    "chacha20poly",
    "aes-gcm-siv",
    "aes-siv",
    "ascon-aead",
    "ccm",
    "deoxys",
    "eax",
]
