[package]
name = "quickfetch_derive"
description = "Derive macros for QuickFetch"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Mustafif Khan", "Moka-Reads"]
documentation = "https://docs.rs/quickfetch/latest"
homepage = "https://mokareads.org"
repository = "https://github.com/Moka-Reads/QuickFetch"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.85"
quote = "1.0.36"
syn = { version = "2.0.66", features = ["full"] }
